--- a/frontend/eco-insight/src/index.css
+++ b/frontend/eco-insight/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-
-  --color-main: #B9FF66;
-  --color-sub: #191A23;
+  --color-main: #b9ff66;
+  --color-sub: #191a23;
+  --color-button1: #f3f3f3;
 }
